--- a/Pipelines_basics_challenge.ipynb
+++ b/Pipelines_basics_challenge.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "5   Xavier"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,12 +459,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [2.],\n",
+       "       [3.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### try here \n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
+    "ord_encoder = OrdinalEncoder()\n",
+    "ord_encoded_data = ord_encoder.fit_transform(df_cat)\n",
+    "ord_encoded_data\n",
     "\n"
    ]
   },
@@ -497,12 +516,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]]\n",
+      "[array(['Eric', 'Michael', 'Sophie', 'Xavier'], dtype=object)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/marcos.centurion@Digital-Grenoble.local/anaconda3/envs/stat3/lib/python3.11/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "## try here \n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
+    "ohot_encoder = OneHotEncoder(sparse=False)\n",
+    "ohot_encoded_data = ohot_encoder.fit_transform(df_cat)\n",
+    "print(ohot_encoded_data)\n",
+    "\n",
+    "\n",
+    "print(ohot_encoder.categories_)\n",
     "\n"
    ]
   },
@@ -1383,7 +1431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
